--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,15 +4,16 @@
 @import "utils/keyframes.scss";
 @import "components/loading_spinner.scss";
 @import "base/common-rules.scss";
-@import "components/loading_spinner.scss";
+@import "components/button.scss";
 @import "pages/header.scss";
 @import "layouts/explore.scss";
+@import "components/box.scss";
 @import "layouts/fonctionnement.scss";
 @import "components/heart.scss";
 @import "layouts/restaurants.scss";
 @import "components/cards.scss";
 @import "pages/footer.scss";
 
-
+@import "pages/banner.scss";
 @import "layouts/menu-menus.scss";
 @import "components/menu-cards.scss";
