--- a/css/style.css
+++ b/css/style.css
@@ -94,35 +94,6 @@ h1 {
   font-family: "Roboto";
 }
 
-.loader {
-  width: 100%;
-  height: 100%;
-  background: #eaeaea;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  z-index: 3;
-  animation: loader_ending 3s forwards;
-}
-.loader .line {
-  width: 50px;
-  height: 50px;
-  margin: 10px;
-  animation: loader 3s both;
-}
-.loader .t1 {
-  background: #99E2D0;
-}
-.loader .t2 {
-  animation-delay: 200ms;
-  background: #FF79DA;
-}
-.loader .t3 {
-  animation-delay: 400ms;
-  background: #9356DC;
-}
-
 header {
   width: 100%;
   height: 70px;
@@ -237,7 +208,7 @@ header a {
 }
 
 .fonctionnement {
-  padding: 30px 30px 70px 30px;
+  padding: 30px;
 }
 .fonctionnement .all_box {
   display: flex;
@@ -245,16 +216,23 @@ header a {
 }
 @media screen and (min-width: 992px) {
   .fonctionnement .all_box {
+    flex-direction: row;
     align-items: center;
+    justify-content: space-around;
   }
 }
 .fonctionnement .box {
-  height: 90px;
   display: flex;
   align-items: center;
   background-color: #f7f7f7;
   border-radius: 20px;
   box-shadow: 2px 2px 15px #c0c0c0;
+  position: relative;
+}
+@media screen and (min-width: 992px) {
+  .fonctionnement .box {
+    width: 30%;
+  }
 }
 .fonctionnement .box:nth-child(2) {
   margin: 20px 0 20px 0;
@@ -267,49 +245,32 @@ header a {
   background: #f2eafb;
   transition: 250ms;
 }
-@media screen and (min-width: 992px) {
-  .fonctionnement .box {
-    width: 400px;
-  }
-}
 .fonctionnement span {
   width: 100px;
   display: flex;
   justify-content: center;
   color: gray;
 }
+@media screen and (min-width: 992px) {
+  .fonctionnement span {
+    width: 50px;
+    margin-left: 20px;
+  }
+}
 .fonctionnement p {
   font-weight: 600;
-  font-size: 20px;
 }
 .fonctionnement .number {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 20px;
   background-color: #9356DC;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -20px;
-}
-
-.heart {
-  position: relative;
-  margin-right: 30px;
-}
-
-.full {
   position: absolute;
-  color: red;
-  opacity: 0;
-}
-.full:active {
-  position: absolute;
-  animation: animation-heart 3s forwards;
-}
-.full:active .empty {
-  opacity: 0;
+  left: -10px;
 }
 
 @media screen and (min-width: 992px) {
@@ -330,6 +291,7 @@ header a {
 }
 
 .cards {
+  display: block;
   border-radius: 25px;
   box-shadow: 0 10px 20px #e6e6e6;
   margin-bottom: 20px;
@@ -358,13 +320,11 @@ header a {
 }
 .cards h3 {
   font-weight: 800;
-  font-size: 25px;
   margin: 5px 0 0 20px;
 }
 .cards p {
-  font-size: 25px;
   font-weight: 400;
-  margin: 0 0 0 20px;
+  margin: 0 0 10px 20px;
 }
 .cards .text {
   display: flex;
@@ -380,6 +340,22 @@ header a {
     width: 400px;
     margin: 20px;
   }
+}
+.cards .heart {
+  position: relative;
+  margin-right: 30px;
+}
+.cards .heart .full {
+  position: absolute;
+  color: red;
+  opacity: 0;
+}
+.cards:hover .full {
+  position: absolute;
+  animation: animation-heart 3s forwards;
+}
+.cards:hover .empty {
+  opacity: 0;
 }
 
 footer {
@@ -407,6 +383,13 @@ footer span {
 }
 footer a {
   color: white;
+  display: flex;
+  align-items: baseline;
+}
+
+.banner img {
+  width: 100%;
+  object-fit: cover;
 }
 
 .menu {
@@ -416,16 +399,7 @@ footer a {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: 150px;
-}
-.menu img {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-  position: absolute;
-  top: -150px;
-  left: 0;
-  z-index: -1;
+  top: -50px;
 }
 .menu .nom-du-menu {
   display: flex;
@@ -439,10 +413,10 @@ footer a {
 .menu .services {
   position: relative;
 }
-.menu .services p {
+.menu .services h2 {
   font-size: 20px;
 }
-.menu .services p::after {
+.menu .services h2::after {
   content: "";
   width: 50px;
   height: 4px;
@@ -485,24 +459,43 @@ footer a {
   color: white;
   font-size: 18px;
 }
+.menu .heart {
+  position: relative;
+  margin-right: 30px;
+}
+.menu .heart .full {
+  position: absolute;
+  color: red;
+  opacity: 0;
+}
+.menu:hover .full {
+  position: absolute;
+  animation: animation-heart 3s forwards;
+}
+.menu:hover .empty {
+  opacity: 0;
+}
 
 .menu-cards {
-  background: #fefefe;
-  box-shadow: 0 10px 20px #cdcdcd;
-  border-radius: 25px;
   display: flex;
+  align-items: center;
+  background-color: #f7f7f7;
+  border-radius: 20px;
+  box-shadow: 2px 2px 15px #c0c0c0;
   align-items: flex-end;
   justify-content: space-between;
   padding: 15px;
-  margin-bottom: 20px;
+}
+@media screen and (min-width: 992px) {
+  .menu-cards {
+    width: 30%;
+  }
 }
 .menu-cards h4 {
   margin: 0;
-  font-size: 20px;
 }
 .menu-cards p {
   margin: 0;
-  font-size: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
