--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -3,6 +3,7 @@
 //////////////
 
 .cards {
+    display:block;
     border-radius: 25px;
     box-shadow: 0 10px 20px lighten($color-shadow, 15%);
     margin-bottom:20px;
@@ -33,14 +34,13 @@
 
     & h3 {
         font-weight: 800;
-        font-size: $font_xlarge;
         margin:5px 0 0 20px;
     }
 
     & p {
-        font-size:$font_xlarge;
+
         font-weight:400;
-        margin: 0 0 0 20px;
+        margin: 0 0 10px 20px;
     }
     & .text {
         display:flex;
@@ -57,6 +57,17 @@
         width: 400px;
         margin:20px;
         
+    }
+
+    @include like;
+
+    &:hover .full {
+        position:absolute;
+        animation: animation-heart 3s forwards;
+    }
+    
+    &:hover .empty {
+        opacity:0;
     }
     
     
