--- a/sass/layouts/_fonctionnement.scss
+++ b/sass/layouts/_fonctionnement.scss
@@ -1,20 +1,19 @@
 .fonctionnement {
-    padding: 30px 30px 70px 30px;
+    padding:30px;
     & .all_box{
         display:flex;
         flex-direction:column;
         @include desktop {
+            flex-direction: row;
             align-items:center;
+            justify-content:space-around;
         }
     }
     
     & .box {
-        height: 90px;
-        display:flex;
-        align-items: center;
-        background-color: lighten($color-background,5%);
-        border-radius: 20px;
-        box-shadow: 2px 2px 15px $color-shadow;
+        @include box;
+        position:relative;
+
         &:nth-child(2) {
             margin: 20px 0 20px 0;
         }
@@ -28,10 +27,6 @@
             background:lighten($color-primary, 35%);
             transition: 250ms;
         }
-
-        @include desktop {
-            width:400px;
-        }
     }
 
     & span {
@@ -39,23 +34,26 @@
         display:flex;
         justify-content: center;
         color:darken($color-shadow,25%);
+        @include desktop {
+            width: 50px;
+            margin-left:20px;
+        }
     }
 
     & p {
         font-weight:600;
-        font-size: $font_large;
     }
 
     & .number {
-        width:40px;
-        height:40px;
+        width:30px;
+        height:30px;
         border-radius:20px;
         background-color: $color-primary;
         color:white;
         display:flex;
         justify-content: center;
         align-items:center;
-        margin-left:-20px;
+        position:absolute;
+        left:-10px;;
     }
-
 }
