--- a/sass/layouts/_menu-menus.scss
+++ b/sass/layouts/_menu-menus.scss
@@ -5,16 +5,7 @@
     display:flex;
     flex-direction: column;
     position:relative;
-    top:150px;
-
-    & img {
-        width:100%;
-        height: 500px;
-        object-fit: cover;
-        position:absolute;
-        top:-150px; left:0;
-        z-index:-1;
-    }
+    top:-50px;
 
     & .nom-du-menu {
         display:flex;
@@ -27,10 +18,12 @@
         font-weight: 600;
     }
 
+// ENTREES PLATS DESSERTS
+
     & .services {
         position:relative;
         
-        & p {
+        & h2 {
             font-size: $font-large;
             &::after {
                 content:"";
@@ -43,8 +36,22 @@
         }
     }
 
+//BOUTON COMMANDER
+
     & .btn {
         @include button;
         margin:auto;
+    }
+
+// BOUTON J'AIME
+
+    @include like;
+    &:hover .full {
+        position:absolute;
+        animation: animation-heart 3s forwards;
+    }
+    
+    &:hover .empty {
+        opacity:0;
     }
 }
