--- a/sass/components/_menu-cards.scss
+++ b/sass/components/_menu-cards.scss
@@ -3,9 +3,9 @@
     align-items:flex-end;
     justify-content: space-between;
     padding: 15px;
-    // margin-bottom: 20px;
+    margin-bottom: 20px;
 
-    & h4 {
+    & h3 {
         margin:0;
     }
 
