--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,15 @@
     transform: translate(9999px);
   }
 }
+@keyframes anim-cards {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .loader {
   width: 100%;
   height: 100%;
@@ -411,15 +420,15 @@ footer a {
   font-family: "Shrikhand";
   font-weight: 400;
 }
-.menu .services {
+.menu .menu-all-cards {
   position: relative;
   margin-top: 20px;
 }
-.menu .services h2 {
+.menu .menu-all-cards h2 {
   font-size: 20px;
   margin-bottom: 30px;
 }
-.menu .services h2::after {
+.menu .menu-all-cards h2::after {
   content: "";
   width: 50px;
   height: 4px;
@@ -427,6 +436,11 @@ footer a {
   position: absolute;
   top: 50px;
   left: 0;
+}
+@media screen and (min-width: 992px) {
+  .menu .menu-all-cards {
+    display: flex;
+  }
 }
 .menu .btn {
   width: 250px;
@@ -490,11 +504,40 @@ footer a {
   padding: 15px;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 992px) {
+  .menu-cards {
+    width: 30%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+}
 .menu-cards h3 {
   margin: 0;
 }
 .menu-cards p {
   margin: 0;
+}
+
+.anim-1 {
+  animation: anim-cards 500ms forwards;
+  opacity: 0;
+}
+
+.anim-2 {
+  animation: anim-cards 500ms 500ms forwards;
+  opacity: 0;
+}
+
+.anim-3 {
+  animation: anim-cards 500ms 1000ms forwards;
+  opacity: 0;
+}
+
+.anim-4 {
+  animation: anim-cards 500ms 1500ms forwards;
+  opacity: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
