--- a/sass/layouts/_restaurants.scss
+++ b/sass/layouts/_restaurants.scss
@@ -1,16 +1,94 @@
+// ARTICLE RESTAURANTS EN GLOBALITE ET 
+// CONTENEUR DE TOUTES LES CARTES
 
-.all_cards {
-    @include desktop {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content:center;
-    }
-}
-
-.restaurants {
-    padding:30px;
+.Restaurants {
+    padding:1.5rem;
     
     @include desktop {
         background: lighten($color-background,5%);    
     }
+
+    &__All-Cards {
+        @include desktop {
+            @include center;
+            flex-wrap: wrap;   
+        }
+    }
+}
+
+// STYLE DES CARTES INDIVIDUELLEMENT
+
+.Restaurants__Cards {
+    display:block;
+    margin-bottom:1rem;
+    background:white;
+    color:black;
+    border-radius: 1rem;
+    box-shadow: 0 10px 20px lighten($color-shadow, 10%);
+    position:relative;
+    @include desktop {
+        width: 290px;
+        margin:1rem;
+        
+    }
+    
+    &__Text {
+        @include center {
+            justify-content: space-between;
+        }
+
+        // BOUTON J'AIME
+
+        @include like-button;
+            &:hover .full {
+                position:absolute;
+                animation: animation-heart 3s forwards;
+        }
+    }
+
+    a {
+        color:black;
+        margin-bottom:1rem;
+    }
+
+// PHOTO
+
+    &>img {
+        width:100%;
+        height:225px;
+        object-fit:cover;
+        border-radius: 1rem 1rem 0 0;
+
+    }
+
+// TITRE
+
+    h3 {
+        font-weight: 800;
+        margin:0 0 0 1rem;
+    }
+
+// TEXTE
+
+    p {
+        
+        font-weight:400;
+        margin:0 0 .5rem 1rem;
+    }
+    
+
+    
+// MACARON NOUVEAU
+
+    &__New {
+        width:8rem;
+        @include center;
+        border-radius:.2rem;
+        background:$color-tertiary;
+        color: darken($color-tertiary,35%);
+        font-weight:600;
+        position:absolute;
+        right:1rem; top:1rem;
+    }
+    
 }
