--- a/sass/utils/_maps.scss
+++ b/sass/utils/_maps.scss
@@ -1,6 +1,5 @@
 $breakpoints: (
-    "mobile":767px,
-    "tablet-down":768px,
-    "tablet-up": 991px,
-    "desktop-down":992px,
+    "mobile":768px,
+    "tablet": 991px,
+    "desktop":992px,
 );
