--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,35 +1,22 @@
-//STYLE PAR DEFAUT DES BOUTONS EXPLORER ET COMMANDER
+// STYLE PAR DEFAUT DES BOUTONS 
+// EXPLORER NOS RESTAURANTS ET COMMANDER
 
 @mixin button {
     width:250px;
     height: 60px;
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    border-radius: 40px;
+    @include center;
+    border-radius: 2rem;
     background: linear-gradient($color-secondary, $color-primary);
     box-shadow: 0px 5px 20px darken($color-shadow, 10%);
     position: relative;
-    
+    transition: 400ms;
+
     &:hover {
-        &::after {
-            opacity: 1;
-        }
-    }
-    
-    &::after {
-        content:"";
-        border-radius: 40px;
-        position:absolute;
-        top:0; right:0; bottom:0; left:0;
-        background: linear-gradient(lighten($color-secondary,10), lighten($color-primary,10));
-        box-shadow: 5px 5px 15px rgb(128, 128, 128);
-        opacity:0;
-        transition: 400ms;
+        opacity:0.8;
+        box-shadow: 0 5px 20px darken($color-shadow, 40%);
     }
 
-    & p {
-        z-index:1;
+    p {
         color: white;
         font-size:$font_medium;
     }
