--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,31 +1,31 @@
 footer {
     background-color: darken($color-background,71%);
     color:white;
-    padding:30px 0 15px 30px;
+    padding:2rem 0 1rem 2rem;
     
-    & h4 {
+    h4 {
         font-family: Shrikhand;
         font-size: $font_large;
         font-weight:100;
         margin:0;
-        margin-bottom:5px;
+        margin-bottom:.3rem;
     }
     
-    & li {
-        height:30px;
+    li {
+        height:2rem;
         display:flex;
         align-items:center;
     }
     
-    & ul {
+    ul {
         padding:0;
     }
     
-    & span {
-        width:30px;
+    span {
+        width:2rem;
     }
     
-    & a {
+    a {
         color:white;
         display:flex;
         align-items: baseline;
