--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -1,9 +1,7 @@
 header {
     width:100%;
     height:70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include center;
     box-shadow: 0 0 4px darken($color-shadow, 40%);
     position:relative;
     z-index: 1;
@@ -15,25 +13,7 @@ header {
     & a {
         color:black;
         position:absolute;
-        left:20px;
-    }
-    
-    // MEDIA QUERIES
-    
-    @include tablet{
-        height:100px;
-        
-        & img {
-            width:400px;
-        }
-    }
-    
-    @include desktop {
-        height:100px;
-        
-        & img {
-            width:400px;
-        }
+        left:2rem;
     }
 }
 
