--- a/sass/layouts/_fonctionnement.scss
+++ b/sass/layouts/_fonctionnement.scss
@@ -59,7 +59,7 @@
         @include desktop {
             width: 3rem;
             margin-left:2.5rem;
-            margin-right:1.5rem;
+            margin-right:.75rem;
         }
     }
     
