--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -6,6 +6,7 @@
         overflow: hidden;
         white-space: nowrap;
         justify-content:space-between;
+        cursor: pointer;
 
 
 // NOMS DES PLATS
