--- a/sass/layouts/_menus.scss
+++ b/sass/layouts/_menus.scss
@@ -3,14 +3,8 @@
 .Banner {
     & img {
         width:100%;
+        height:511px;
         object-fit: cover;
-
-        @include tablet {
-            height:511px;
-        }
-        @include desktop {
-            height:511px;
-        }
     }
 }
 
@@ -47,27 +41,19 @@
 
     &__All-Cards {
 
-        @include tablet {
-            display:flex;
-            flex-wrap:wrap;
-        }
         @include desktop {
             display:flex;
             flex-wrap:wrap;
+            justify-content:center;
         }
     }
 
     &__Category-Cards {
         position:relative;
-       
-        @include tablet {
-            width:30%;
-            margin:auto;
-        }
 
         @include desktop {
-            width:30%;
-            margin:auto;
+            width:420px;
+            margin:1rem 1rem 0 1rem;
         }    
     }   
 
