--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,32 @@
-.loader {
+.background {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #eaeaea;
+  animation: loader-ending 0s 3s forwards;
   position: fixed;
-  z-index: 3;
-  animation: loader_ending 3s forwards cubic-bezier(0, 0.99, 0, 0.99);
+  z-index: 2;
 }
-.loader .line {
-  width: 3rem;
-  height: 3rem;
-  margin: 1rem;
-  animation: loader 3s both;
-}
-.loader .t1 {
-  background: #99E2D0;
-}
-.loader .t2 {
-  animation-delay: 200ms;
-  background: #FF79DA;
-}
-.loader .t3 {
-  animation-delay: 400ms;
-  background: #9356DC;
+.background__loader {
+  width: 5rem;
+  height: 5rem;
+  border: 0.3rem solid;
+  border-color: #9356DC transparent #FF79DA transparent;
+  border-radius: 50%;
+  animation: loader 750ms infinite ease;
 }
 
 @keyframes loader {
   0% {
-    transform: scaleY(1) scaleX(1);
-  }
-  25% {
-    transform: scaleY(3) scaleX(0.5);
-  }
-  50% {
-    transform: scaleY(0.5) scaleX(1.3);
-  }
-  75% {
-    transform: scale(1);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scaleY(1) scaleX(1);
-    border-radius: 2rem;
+    transform: rotate(360deg);
   }
 }
-@keyframes loader_ending {
-  0%, 99% {
-    transform: translate(0);
-  }
+@keyframes loader-ending {
   100% {
     transform: translate(500rem);
   }
@@ -214,7 +192,7 @@ header a {
 }
 @media screen and (min-width: 992px) {
   .Function span {
-    width: 3rem;
+    width: 2rem;
     margin-left: 2.5rem;
     margin-right: 0.75rem;
   }
