--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,75 +1,43 @@
 //LOADER DE CHARGEMENT DE LA PAGE D'ACCUEIL
 
-.loader {
-    width: 100%;
-    height:100%;
-    @include center;
-    background:$color-background;
-    position:fixed;
-    z-index:3;
-    animation: loader_ending 3s forwards cubic-bezier(0,.99,0,.99);
-    
-    & .line {
-      width:3rem;
-      height:3rem;
-      margin:1rem;
-      animation: loader 3s both ;
-    }
-    
-    & .t1 {
-      background:$color-tertiary;
-    }
-    
-    & .t2 {
-      animation-delay: 200ms;
-      background: $color-secondary;
-    }
-    
-    & .t3 {
-    animation-delay: 400ms;
-    background: $color-primary;
+.background {
+  width:100%;
+  height:100%;
+  @include center;
+  background: $color-background;
+  animation: loader-ending 0s 3s forwards;
+  position:fixed;
+  z-index:2;
+
+  &__loader {
+    width: 5rem;
+    height: 5rem;
+    border: .3rem solid;
+    border-color: $color-primary transparent $color-secondary transparent;
+    border-radius: 50%;
+    animation: loader 750ms infinite ease;
   }
-  
 }
-  
+
 // ANIMATION D'ARRIVEE DU LOADER
 
 @keyframes loader {
-  0% { 
-      transform:  scaleY(1)
-                  scaleX(1);
+  0% {
+    transform: rotate(0deg);
   }
-          
-  25% {
-      transform:  scaleY(3)
-                  scaleX(.5);
-  }
-          
-  50%{
-      transform:  scaleY(.5)
-                  scaleX(1.3);
-  }
-          
-  75% {
-      transform:  scale(1) ;
-  }
-          
-  100%{
-      transform:  scaleY(1)
-                  scaleX(1);
-      border-radius: 2rem;
+  100% {
+    transform: rotate(360deg);
   }
 }
 
 // ANIMATION DE DEPART DU LOADER
 
-
-@keyframes loader_ending {
-  0%, 99% {
-      transform: translate(0);
-  }
-  
+@keyframes loader-ending {
   100% {
-      transform: translate(500rem);
+      transform:translate(500rem);
   }
+
 }
+
+
+
